# on-device-model-compression-lab

./: .gitignore  DATASETS.md  LICENSE  MODEL_LICENSES.md  Makefile  PRIVACY.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/eval20/: mobilevit_small_fp16.yaml  mobilevit_small_int8_weight_only.yaml  mobilevit_small_palettized_6bit.yaml  mobilevit_small_palettized_8bit.yaml  mobilevit_small_pruned_sparse_50.yaml  mobilevit_xxsmall_fp16.yaml  mobilevit_xxsmall_int8_weight_only.yaml  mobilevit_xxsmall_palettized_6bit.yaml  mobilevit_xxsmall_palettized_8bit.yaml  mobilevit_xxsmall_pruned_sparse_50.yaml
configs/eval500/: mobilevit_small_fp16.yaml  mobilevit_small_int8_weight_only.yaml  mobilevit_small_palettized_6bit.yaml  mobilevit_small_palettized_8bit.yaml  mobilevit_small_pruned_sparse_50.yaml  mobilevit_xxsmall_fp16.yaml  mobilevit_xxsmall_int8_weight_only.yaml  mobilevit_xxsmall_palettized_6bit.yaml  mobilevit_xxsmall_palettized_8bit.yaml  mobilevit_xxsmall_pruned_sparse_50.yaml
configs/recovery/: mobilevit_xxsmall_int8_calib128_bias.yaml  mobilevit_xxsmall_int8_calib32_bias.yaml  mobilevit_xxsmall_int8_calib512_bias.yaml
configs/smoke/: mobilevit_xxsmall_fp16.yaml  synthetic_fp16.yaml
docs/: architecture.md
recipes/: int8_weight_only.yaml  palettized_6bit.yaml  palettized_8bit.yaml  pruned_sparse_50.yaml
reports/: benchmark_environment.md  case_study.md  real_benchmark_table.csv  real_benchmark_table.md
tests/: test_benchmark.py  test_cli.py  test_config.py  test_imagenette.py  test_metrics.py  test_recovery.py  test_scoreboard.py
(+25 files in other folders)
