[project]
name = "mlclab"
version = "0.1.0"
description = "Local-first Core ML compression lab for MobileViT."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pillow>=10.0",
  "psutil>=5.9",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
ml = [
  "coremltools>=8.0",
  "scikit-learn>=1.4,<=1.5.1",
  "torch>=2.3",
  "torchvision>=0.18",
  "transformers>=4.40",
]
dev = [
  "pip-audit>=2.7",
  "pytest>=8.0",
  "ruff>=0.6",
]

[dependency-groups]
dev = [
  "pip-audit>=2.7",
  "pytest>=8.0",
  "ruff>=0.6",
]
ml = [
  "coremltools>=8.0",
  "scikit-learn>=1.4,<=1.5.1",
  "torch>=2.3",
  "torchvision>=0.18",
  "transformers>=4.40",
]

[project.scripts]
mlclab = "mlclab.cli:app"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "integration: tests that need Core ML, model downloads, or local datasets",
]
